# contract-risk-analyzer

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: tasks.json
data/easy/: easy_001.json  easy_002.json  easy_003.json  easy_004.json  easy_005.json  easy_006.json  easy_007.json  easy_008.json  easy_009.json  easy_010.json
data/hard/: hard_001.json  hard_002.json  hard_003.json
data/medium/: medium_001.json  medium_002.json  medium_003.json  medium_004.json  medium_005.json
scripts/: prepare_cuad_data.py
server/: app.py  environment.py  grader.py  requirements.txt
